css/base.css
* {
  box-sizing: border-box;
}

html {
  font-family: 'Kanit', sans-serif;
}

body {
  margin: 0;
  background-color: rgb(5, 6, 11);
  color: #eee;
}

body > nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding: 1rem 2rem;
  display: flex;
  align-items: center;
  gap: 2rem;
  background-color: rgb(5, 6, 11, 0.5);
  z-index: 1000;
  height: 64px;
}

body > footer {
  text-align: center;
  padding-bottom: 2rem;
}

body > main {
  padding-top: 64px;
  min-height: 100vh;
}

img {
  max-width: 100%;
}

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
  color: rgb(28, 159, 229);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-top: 0;
  margin-bottom: 1rem;
}

.container {
  margin-left: auto;
  margin-right: auto;
  max-width: 1080px;

  padding-left: 1rem;
  padding-right: 1rem;
}

.btn {
  outline: none;
  border: none;
  border-radius: 1rem;
  padding: 1rem 2rem;
  font-weight: 400;
  color: #eee;
  background-color: transparent;
}

.links {
  display: flex;
  gap: 2rem;
  display: none;
}

.social {
  align-items: center;
  display: flex;
  gap: 1rem;
  margin-left: auto;
  display: none;
}

.social > a {
  height: min-content;
}

.burger {
  padding: 0 !important;
  margin-left: auto;
  display: inline-block;

  z-index: 4;
  position: relative;
}

@media (min-width: 600px) {
  .links,
  .social {
    display: flex;
  }

  .burger {
    display: none;
  }
}

